# BreakidemicEx

./: README.md
src/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
src/Box2DElements/: BoxCollider.qml  CircleCollider.qml  PhysicsBody.qml  PhysicsDebugDraw.qml  PhysicsWorld.qml
src/Brekidemic/: ballcomponent.cpp  ballcomponent.h  localstorage.cpp  localstorage.h  paddlecomponent.cpp  paddlecomponent.h  wallcomponent.cpp  wallcomponent.h
src/Views/: Boxes.qml  Wall.qml  WoodenBox.qml
src/Views/Brekidemic/: Ball.qml  Paddle.qml  WallBase.qml
src/Views/Vintage/: Entity.qml
src/qml-box2d/: license.txt
src/vintage/: entityitem.cpp  entityitem.h  entitymanager.cpp  entitymanager.h  playerinputcontroller.cpp  playerinputcontroller.h  scene.cpp  scene.h
